<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/month"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/monthName"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />




    <TextView
        android:id="@+id/total"
        android:layout_width="274dp"
        android:layout_height="28dp"
        android:text="@string/total"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/totalCost"
        android:layout_width="166dp"
        android:layout_height="54dp"
        android:focusable="true"
        android:inputType="text"
        android:padding="10dp"
        android:text="@string/cost"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        tools:ignore="TextViewEdits" />

    <TableLayout
        android:layout_width="584dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="2.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_gaze"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_gaze" />

            <TextView
                android:id="@+id/gaze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/gaze"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/gazeCost"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:text="@string/cost"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/leiGaze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/lei"
                android:textSize="20sp" />

        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/iv_curent"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_curent" />

            <TextView
                android:id="@+id/curent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/curent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/curentCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:text="@string/cost"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/leiCurent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/lei"
                android:textSize="20sp" />

        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/iv_intretinere"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_intretinere" />

            <TextView
                android:id="@+id/intretinere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/intretinere"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/intretinereCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:text="@string/cost"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/leiIntr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/lei"
                android:textSize="20sp" />

        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/iv_cablu"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cablu" />

            <TextView
                android:id="@+id/cablu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/cablu"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/cabluCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:text="@string/cost"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/leiCablu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/lei"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />


</androidx.constraintlayout.widget.ConstraintLayout>